# KoLBot_2022

./: .gitignore  Cargo.toml  LICENSE  NOTICE
KoLBot_2022/: Cargo.toml
data/: initialize.ini  strings.ini
documentation/: LICENSE  NOTICE  README.md  README.txt  development.txt  flow diagram.txt  history.txt  message.txt  rust.txt  setup.txt
documentation/unix/: kolbot.conf  kolbot.d  kolbot.service
documentation/windows/: install_service.bat  remove_service.bat
src/: channel_clan.rs  chat.rs  connection.rs  constants.rs  fortune.rs  global_constants.rs  global_variables.rs  globals.rs  initialization.rs  lib.rs  logging.rs  macros.rs  main.rs  message_handling.rs  parse_kol_data.rs  regular_expressions.rs  rules.rs  rules_constants.rs  signals.rs  utilities.rs
